Fixed overflow of pages with height greater than screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 html, body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
-    overflow: hidden;
 }
