--- a/src/Components/Presentation/index.css
+++ b/src/Components/Presentation/index.css
@@ -1,7 +1,6 @@
 
 #presentation-main {
-    width: 100vw;
-    height: 100vh;
+    height: 95vh;
     /* background-color: darkslategray; */
     background-color: #46749c;
     /* background-color: #103174; */
@@ -25,8 +24,6 @@
 }
 
 #presentation-main > div {
-    width: 100vw;
-    height: 100vh;
     /* background: url('../../images/galena-icon-white-border.png'); */
     background-position: center;
     background-repeat: no-repeat;
